--- a/ch03/package.json
+++ b/ch03/package.json
@@ -4,6 +4,7 @@
   "main": "meadowlark.js",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "express-handlebars": "3"
   }
 }
