--- a/ch05/package.json
+++ b/ch05/package.json
@@ -7,6 +7,8 @@
     "express-handlebars": "3"
   },
   "devDependencies": {
-    "jest": "^29.1.2"
+    "jest": "^29.1.2",
+    "portfinder": "^1.0.32",
+    "puppeteer": "^18.0.5"
   }
 }
