--- a/ch05/package.json
+++ b/ch05/package.json
@@ -1,12 +1,14 @@
 {
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint meadowlark.js lib"
   },
   "dependencies": {
     "express": "^4.18.1",
     "express-handlebars": "3"
   },
   "devDependencies": {
+    "eslint": "^8.24.0",
     "jest": "^29.1.2",
     "portfinder": "^1.0.32",
     "puppeteer": "^18.0.5"
