--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "body-parser": "^1.20.1",
     "express": "^4.18.1",
     "express-handlebars": "3"
   },
