--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "body-parser": "^1.20.1",
     "express": "^4.18.1",
-    "express-handlebars": "3"
+    "express-handlebars": "3",
+    "multiparty": "^4.2.3"
   },
   "devDependencies": {
     "jest": "^29.1.2"
