--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   },
   "dependencies": {
     "body-parser": "^1.20.1",
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.1",
     "express-handlebars": "3",
     "multiparty": "^4.2.3"
