--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "cookie-parser": "^1.4.6",
     "express": "^4.18.1",
     "express-handlebars": "3",
+    "express-session": "^1.17.3",
     "multiparty": "^4.2.3"
   },
   "devDependencies": {
